fixed user login and signup for user img
also changed post link color to make it distinguishable

--- a/riseup-vue2-vuetify/public/styles.css
+++ b/riseup-vue2-vuetify/public/styles.css
@@ -20,6 +20,9 @@
 .is-orange{
   color: #FF8C00 !important;
 }
+.is-dark-orange{
+  color: #ff8c00be !important;
+}
 .is-white {
   color: #bfbfbf !important;
 }
